# nunet

./: .gitignore  README.md  example_minimal.py  setup.cfg
notebooks/: minimal_example.ipynb
nunet/: __init__.py  config.py  utils.py
scripts/: test_nunet.py  train_nunet.py
