[metadata]
name = nunet
author = Seongbin Lim
author_email = seongbin.lim@polytechnique.edu
description = NU-Net (experimental)
url = https://github.com/sbinnee/nunet
version = 0.0.1
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
  numpy
  Pillow
  opencv-python-headless
  tifffile
  albumentations  # scikit-image, opencv-python-headless, scipy
  PyYAML
