[metadata]
name = nunet
author = Seongbin Lim
author_email = seongbin.lim@polytechnique.edu
description = NU-Net (experimental)
url = https://github.com/sbinnee/nunet
version = 0.0.2
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
  rich
  tqdm
  numpy
  Pillow
  opencv-python-headless
  torch
  torchvision
  tensorboard
  tifffile
  albumentations  # scikit-image, opencv-python-headless, scipy
  PyYAML
  imgaug
  bioimageloader
